<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background">

    <ImageButton
        android:id="@+id/btn_back"
        android:layout_width="@dimen/edit_gap"
        android:layout_height="@dimen/edit_gap"
        android:layout_marginStart="@dimen/side_margin"
        android:background="@color/colorless"
        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back_24" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="50dp"
        android:layout_height="@android:dimen/app_icon_size"
        android:layout_margin="@dimen/appbar_padding_top"
        android:fadingEdgeLength="@dimen/edit_gap"
        android:requiresFadingEdge="horizontal"
        app:layout_constraintStart_toEndOf="@+id/btn_back"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/gads" />


    <TextView
        android:id="@+id/textView6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/appbar_padding_top"
        android:layout_marginEnd="@dimen/side_margin"
        android:text="@string/google_africa"
        app:layout_constraintBottom_toTopOf="@+id/textView7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/developer_schoolarship"
        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
        app:layout_constraintEnd_toEndOf="@+id/textView6"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <ScrollView
        android:id="@+id/form_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView4"
        app:layout_constraintVertical_bias="1.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/project_submission"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/big_header"
                android:layout_marginTop="@dimen/edit_gap"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/divider2"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginStart="@dimen/edit_gap"
                android:layout_marginEnd="@dimen/edit_gap"
                android:background="@color/colorAccent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <EditText
                android:id="@+id/last_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/appbar_padding_top"
                android:layout_marginEnd="@dimen/side_margin"
                android:background="@drawable/edit_bacgroud"
                android:hint="@string/last_name"
                android:inputType="textPersonName"
                android:text="gggg"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/colorPrimary"
                app:layout_constraintBottom_toBottomOf="@+id/first_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/first_name"
                app:layout_constraintTop_toTopOf="@+id/first_name" />

            <EditText
                android:id="@+id/first_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/side_margin"
                android:layout_marginEnd="@dimen/appbar_padding_top"
                android:background="@drawable/edit_bacgroud"
                android:hint="@string/first_name"
                android:inputType="textPersonName"
                android:text="re"

                android:layout_marginTop="@dimen/edit_gap"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/colorPrimary"
                app:layout_constraintEnd_toStartOf="@+id/last_name"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider2" />

            <EditText
                android:id="@+id/email_address"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/side_margin"
                android:layout_marginTop="@dimen/edit_gap"
                android:layout_marginRight="@dimen/side_margin"
                android:layout_marginBottom="@dimen/edit_gap"
                android:background="@drawable/edit_bacgroud"
                android:ems="10"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/first_name" />

            <EditText
                android:id="@+id/git_link"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/side_margin"
                android:layout_marginTop="@dimen/edit_gap"
                android:layout_marginRight="@dimen/side_margin"
                android:background="@drawable/edit_bacgroud"
                android:ems="10"
                android:hint="@string/project_on_github_link"
                android:inputType="textPersonName"
                android:text="https://docs.google.com/forms/u/0/d/e/1FAIpQLScmsi0l4q66caxFYYta7tRsSVR5_EZ_dBsvtvFhb6yco7Sqkg/formResponse "
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email_address" />

            <Button
                android:id="@+id/btn_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/edit_gap"
                android:background="@drawable/btn_submit_form"
                android:ems="7"
                android:text="@string/submit"
                android:textAllCaps="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/git_link" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>